samples/_failures_safe/1761316333_bc12a8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_64a2d663.c: In function ‘cleanup_log_collection’:
./samples/SAFE/__tmp_64a2d663.c:137:9: error: expected expression at end of input
  137 |         collection->count =
      |         ^~~~~~~~~~
./samples/SAFE/__tmp_64a2d663.c:137:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_64a2d663.c:137:9: error: expected declaration or statement at end of input
